Update climbing study and sync local repo

--- a/climbing_study.html
+++ b/climbing_study.html
@@ -34,7 +34,7 @@
         <div class="container climbingStudy">
             <div class="row">
                 <article>
-                    <h1> Grip Harder, Climber Stronger?</h1>
+                    <h1 class="display-1"> Grip Harder, Climber Stronger?</h1>
                     <h2> A Study on Grip Strength and Climbing Grade</h2>
                     <section>
                         <h3>Purpose and Hypothesis</h3>
@@ -45,7 +45,7 @@
                         </p>
                     </section>
                     <section>
-                        <h3>How Study Was Conducted</h3>
+                        <h3>How the Study Was Conducted</h3>
                         <p>The survey was relatively easy and fun to conduct. While going to my three local Hangar 18 gyms in Rancho Cucamonga, Upland, and Orange I took a hand dynamometer along with me and asked people to squeeze the device whenever I was not climbing. <img src="img/hand_dynanometer.jpg" style="height: 200px; width: auto; float: right;"> I would check both hands and ask the many questions; the most important being their highest grade climbed, weight, experience, and what part of their session: Start, Middle, or End. All data is publically available on the “Data” tab. It is important to note that there are flaws in surveying. The samples are biased as I would pick who to survey whether it be who was the most convenient, those in groups, people climbing the hardest grades, etc. The “Start, Middle, End” is very subjective as how people’s bodies warm up varies. Likewise, not every session as some sessions people climb harder such that their forearms are more sore at the end. Highest grade was also vaguely asked. Sometimes I specified “indoor” as maybe did not seem implied. Also, when comparing gyms I did not specify the highest grade climbed in the gym I was surveying. Orange Hangar 18 in particular uses color grading which is a range of grades making the “highest grade” even more subjective for that particular gym. Assuming people just told their highest grade climbed anywhere, this could affect data between gyms.</p>
                     </section>
                     <section>
