Fixed font and added About Page

--- a/about_me.html
+++ b/about_me.html
@@ -19,7 +19,7 @@
                         <a class="nav-link" href="climbing_study.html">Climbing Study</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="about_me.html">About Me</a>
+                        <a class="nav-link active" href="about_me.html">About</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link"
@@ -30,7 +30,43 @@
         </nav>
     </header>
     <main role="main">
-        
+        <div class="container">
+            <div class="row pt-5 m-">
+                <h1 class="display-1 text-center">About the Climbing Study</h1>
+                <div class="col-lg-4 p-3 bg-secondary bg-gradient text-white">
+                    <img src="img/me_climbing.png" class="img-thumbnail">
+                    <section>
+                        <h2 class="display-4">Hi, I am Kai Labasan!</h2>
+                        <p>I am 25 years old and a software engineer. I started climbing before COVID in 2020 then again once gyms reopened in August 2020. So really that means I have been climbing a couple months under 2 years. 
+                            My grip strength to weight ratio is 140/155 lbs which calculates me for a grade of V7.17 which is pretty accurate for me indoors. I go outdoors when I can but normally am pretty buys working full-time. 
+                            I think many assumed since I was doing a study like this I must be a really good climber but that
+                            is definitely NOT the case haha. I created this site to host the study and make it easily accessible to the public. 
+                            Improvements will be made to make it visually more appealing and adding functionality if the study expands.
+                        </p>
+                    </section>
+                </div>
+                <div class="col-lg-8 pt-3 faq">
+                    <h2 class="display-3">Frequently Asked Questions</h2>
+                    <h3>Why did you start this study?</h3>
+                    <p>A lot of people asked me this as I interuppted their session to ask to measure their grip strength. A school project would make sense but it was really all just for fun. I saw Alex Honnold squeeze one of these devices on a Youtube short
+                        and wanted to see what my grip strength was. After measuring my own, I wanted to see how I compared to all the strong climbers at the gym. I am glad it was just for fun because if it was for a school project, I would have turned it in
+                        super late as I started in July 2021 hoping to be done by September 2021. Finishing in Feb 2022 then publishing this site in March would defintely be at most half credit. That said, the study did force me to familiarize myself with
+                         so many people at my gyms which was really nice. So funny enough, it was not about the results of the climbing study but rather the friends I made along the way.
+                    </p>
+                    <h3>Are you going to publish the results?</h3>
+                    <p>Maybe. People have been very encouraging about the whole process. It is true there hasn't been too many similar studies that survey hundreds of local climbers. Climbing relative to the big sports in America is still small and thus less
+                        explored from a sports science prospective. I am sure that will change in the future. I am a bit shy and worried it might be up to par. I notice when the calculator sandbags someone's grade they become embarassed or upset. Understandable
+                         but the predicted grade is really just a prediction that doesn't truly capture their climbing ability. Again, I just did this study for fun so I would definitely need to do a third or fourth draft of the climbing study article before thinking
+                         of publishing. 
+                    </p>
+                    <h3>Are you going to do another one of these?</h3>
+                    <P>Nobody actually asked me this LOL but many people did have gave suggestions on how to improve the study which would pretty much be like doing a whole separate version of the study. Despite it honestly being a lot of work as surveying people pretty much guaranting my session takes an additional hour
+                        or two, I actually do want to do another one of these studies but with finger strength. This is mentioned on the front page but it would definitely take more work than carrying around a small dynanometer in my bag. Also, I am open to 
+                        collaborating with others interested in creating something similar.
+                    </P>
+                </div>
+            </div>
+        </div>
     </main>
     <footer class="bg-dark text-center text-white">
         <div>
