--- a/climbing_study.html
+++ b/climbing_study.html
@@ -20,7 +20,7 @@
                         <a class="nav-link active" href="#l">Climbing Study</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " href="about_me.html">About Me</a>
+                        <a class="nav-link " href="about_me.html">About</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link"
@@ -34,7 +34,7 @@
         <div class="container climbingStudy">
             <div class="row">
                 <article>
-                    <h1 class="display-1"> Grip Harder, Climber Stronger?</h1>
+                    <h1 class="display-1"> Grip Harder, Climb Stronger?</h1>
                     <h2> A Study on Grip Strength and Climbing Grade</h2>
                     <section>
                         <h3>Purpose and Hypothesis</h3>
@@ -194,7 +194,7 @@
                         <p>Knowing about the p-value, you may notice some patterns: experience p-score is higher than grip strength and the “const” values often have p-values above 0.05. Experience having a higher p-score makes sense because intuitively not all additional years of climbing translate to improvement in technique. Presumably, you rapidly improve in the first year or two of climbing whereas improvement becomes more subtle in later years. For the constant values, they largely represent the model when the x-value (grip strength and experience) is zero. This is not a very important value in the study since it is irrelevant to consider a climber with zero grip strength. I suppose goats are capable of climbing while possessing zero grip strength.</p>
                     </section>
                     <section>
-                        <h3>Numbers?</h3>
+                        <h3>What does the data show?</h3>
                         <p>With all of the models finalized, we can compare the coefficients between sex and gym. Overall, the coefficient of strength in multiple linear regression is larger for female climbers. This would indicate that strength affects female climbers more than male climbers. However, when investigating the difference between gyms Orange largely swings in favor of females while Rancho pulls the other way. Looking at the experience coefficient between gyms, there are also extreme patterns between the gyms. We must remember that none of the data collected for female climbers Upland has a p-value under 0.05 making it not reliable. If Orange and Rancho aligned I would have more confidence in a trend between sex since those gyms have reliable data. Given the data, I would not say there are any patterns between how experience and strength affects male and female climbers. Maybe with more data samples of female climbers across gyms, there would be better evidence. </p>
                         <p>Next, let’s compare all climbers between gyms. With Rancho being the gym of reference, Upland relatively requires 67% less experience and 3% more strength to climb the same grade as Rancho. Since values of strength are close, this may imply that Upland grading tends to be more reliant on strength compared to Rancho. On the other hand, Orange relatively requires 40% more experience and 63% less strength to climb the same grade as Rancho. Since Rancho and Upland were close in strength yet Orange was very different, this implies Orange requires less strength than the other two. In contrast, experience plays a larger role in climbing stronger at Orange. As an example according to the model:</p>
                         <ul>
