--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                         <a class="nav-link" href="climbing_study.html">Climbing Study</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " href="about_me.html">About Me</a>
+                        <a class="nav-link " href="about_me.html">About</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link"
@@ -173,7 +173,10 @@
                 <div class="featurette">
                         <img class="featurette-image float-start img-fluid" src="img/Grip_Strength.png">
                         <h2 class="featurette-heading">Goal of Climbing Study <span class="text-muted">Hypothesis</span></h2></h2>
-                        <p class="lead">The main goal is to answer the question, is there a correlation between grip strength and the grade people climb? My hypothesis is yes. However, anyone would know techinqiue is just as important as strength when climbing. Could we also make a correlation between experience as a metric of technique, grip strength, and the grade people climb? I thought yes again. While seeking to answer these questions, other interesting questions like is there a difference between how much grip strength and experience affect male and female climbers? Is there a difference between the three Hangar 18 gyms? I would guess male climbers would be more reliant on strength while female climbers on techinque. Likewise, I struggle at Orange Hangar 18 opposed to Rancho Upland making me think Orange might be "hardest". Read the Climbing Study to find the results of the Study! </p>
+                        <p class="lead">The main goal is to answer the question, is there a correlation between grip strength and the grade people climb? My hypothesis is yes. However, anyone would know techinqiue is just as important as strength when climbing. 
+                            Could we also make a correlation between experience as a metric of technique, grip strength, and the grade people climb? I thought yes again. While seeking to answer these questions, other interesting questions like is there a difference
+                             between how much grip strength and experience affect male and female climbers? Is there a difference between the three Hangar 18 gyms? I would guess male climbers would be more reliant on strength while female climbers on techinque. 
+                             Likewise, I struggle at Orange Hangar 18 opposed to Rancho Upland making me think Orange might be "hardest". Read the Climbing Study to find the results! </p>
                 </div>
                 <hr class="featurette-divider">
                 <div class="featurette" >
@@ -182,7 +185,10 @@
                     </picture>
                         <h2 class="featurette-heading">Future Climbing Study <span class="text-muted">Finger
                                 strength</span></h2>
-                        <p class="lead">The journey of me seeing Alex Honnold squeeze the hand dynamometer on Youtube to me launching an independent climbing study in my free time has been a fun journey. I had the pleasure of meeting and familiarizing myself with many cool people at my local climbing gyms as well as finding out interesting insight on climbing. My curiousity has only sparked more as now that I see the correlation between grip strength and climbing, I want to know the correlation between finger strength and climbing as I feel finger strength is significantly more important than grip strength. This however would require much more setup opposed to taking a small device off of Amazon. I hope to one day drag tons of weights and a harness to gyms to start this new climbing study!</p>
+                        <p class="lead">The journey of me seeing Alex Honnold squeeze the hand dynamometer on Youtube to me launching an independent climbing study in my free time has been a fun journey. I had the pleasure of meeting and familiarizing myself with 
+                            many cool people at my local climbing gyms as well as finding out interesting insight on climbing. My curiousity has only sparked more as now that I see the correlation between grip strength and climbing, I want to know the correlation 
+                            between finger strength and climbing as I feel finger strength is significantly more important than grip strength. This however would require much more setup opposed to taking a small device off of Amazon. I hope to one day drag tons of 
+                            weights and a harness to gyms to start this new climbing study! I could then have a new calculator that predicts climbing grade based off of finger strength.</p>
                 </div>
                 <hr class="featurette-divider">
             </div>
