Reword study and climbing result

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                         climb that grade on average. If the grade you climb is higher than the predicted grade, this can
                         mean several things: grip strength may not be your strength, difference in grading, ahead of
                         learning curve, etc. On the other hand if your actual grade is lower, you might not be climbing
-                        to your potential, your gym is harder, etc. Your predicted grade is ultimately an indicator of
+                        to your potential, your gym is harder, etc. Ultimately, grades are subjective and your predicted grade is an indicator of
                         where you lie amongst the climbers surveyed in Hangar 18 gyms. For more info on the study,
                         please feel free to read the "Climbing Study" page!</p>
                     <small>Note: Calculator does not do a great job calculating grades v9+ due to lack of
